--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg bg-info">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="/img/logo2.png" class="logo">
+                <img src="logo2.png" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -29,18 +29,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="index.html">Hostel Life</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#fees">Fees</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="#facility">Facility</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#contact">Contact Us</a>
-                    </li>
+                
                     <li class="nav-item">
                         <a class="nav-link" href="https://www.rajshree.ac.in/">Campus Life</a>
                     </li>
@@ -142,6 +131,13 @@
         <br>
         <h2 class="hg" data-aos="zoom-in-down">--Get in Touch--</h2>
         <br>
+        <p class="address">16 KM, National Highway 30, Pillbhit Road, Bareilly, UttarPradesh
+            243122</p>
+            
+            <p class="address">+91-9528-180-180</p>
+            <p class="address">+91-9690-000-100</p>
+            <p class="address">+91-9690-000-102</p>
+            <p  class="address"><a href="">rajshree.insitute@gmail.com</a></p>
         <div class="grid text-center" style="--bs-gap: 25rem 5rem;">
             <div class="g-col-6 ">
                 <ul>
