--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
 
         <div class="card">
             <div class="card-header-pills bg-light  text-center">
-                <h3><a href="" class="typewrite  font-effect-emboss " data-period="3000" data-type='[ "Namaste!" ]'>
+                <h3><a href="" class="typewrite  font-effect-emboss " data-period="3000" data-type='[ "નમસ્તે" ]'>
                         <span class="wrap "></span>
                     </a>
-                    <i class="fa fa-sign-language" style="font-size:30px;color:red"></i>
+                    <i class="fa fa-sign-language" style="font-size:25px;color:red"></i>
                 </h3>
             </div>
             <div class="card-body  text-center">
@@ -158,7 +158,7 @@
                             <img src="img/b1.jpg" class="card-img-top img-fluid" style="border-bottom:2px solid blue;">
                             <div class="card-body bg-info text-black">
                                 <h5 class="card-title">College Time</h5>
-                                <button class="btn">Know more>></button>
+                                <button class="btn"><a class="knowmore" href="collegetime.html">Know more</a></button>
                                 <p class="card-text"> </p>
                             </div>
                         </div>
@@ -168,7 +168,7 @@
                             <img src="img/b2.jpg" class="card-img-top img-fluid" style="border-bottom:2px solid blue;">
                             <div class="card-body bg-info text-black">
                                 <h5 class="card-title ">Industrial visit</h5>
-                                <button class="btn">Know more>></button>
+                                <button class="btn"><a class="knowmore" href="industrial visit.html"> Know more</a></button>
                                 <p class="card-text"></p>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                             <img src="img/b3.jpg" class="card-img-top img-fluid" style="border-bottom:2px solid blue;">
                             <div class="card-body bg-info text-black">
                                 <h5 class="card-title">Sports Champion</h5>
-                                <button class="btn">Know more>></button>
+                                <button class="btn"><a class="knowmore" href="cricket champion.html">Know more</a></button>
                                 <p class="card-text"></p>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
                             <img src="img/b4.jpg" class="card-img-top img-fluid" style="border-bottom:2px solid blue;">
                             <div class="card-body bg-info text-black"><br>
                                 <h5 class="card-title">Hostel Fun</h5>
-                                <button class="btn">Know more>></button>
+                                <button class="btn"><a class="knowmore" href="HostelFun.html">Know more</a></button>
                                 <p class="card-text"></p>
                             </div>
                         </div>
