--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
                     </ul>
                     <form class="d-flex" role="search">
-                        <button class="btn1 btn-outline-success"><a href="apply now.html">
-                                Apply now </a></button>
+                        <button class="btn1 btn-outline-success"><a href="loginpage.html">
+                                Login</a></button>
                     </form>
                 </div>
             </div>
@@ -401,7 +401,7 @@
                 <img src="img/l1.png" class="card-img-top p-3" alt="...">
                 <div class="card-body">
                     <h5 class="card-title"><span>|</span> Warden Sir</h5>
-                    <p class="card-text">This is Mrs Saurav Diwedi warden and responisble care taker
+                    <p class="card-text">This is Mr Saurav Diwedi warden and responisble care taker
                         of hostels and hostel boys. Saurav diwedi also head of B.tech(EE)
                         department in RIMT campus.
                     </p>
@@ -422,7 +422,7 @@
                 <img src="img/l2.webp" class="card-img-top p-3" alt="...">
                 <div class="card-body">
                     <h5 class="card-title"><span>|</span>Warden Mam</h5>
-                    <p class="card-text">This is Mis Anuradha singh warden of girls hostel and care taker of
+                    <p class="card-text">This is Ms Anuradha singh warden of girls hostel and care taker of
                         hostel girls. Anurdha mam also a good faculty of d.forma department.
                     </p>
                     <p class="card-text"><small class="text-muted">+91 7310307513</small></p>
