--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         RIMT CAMPUS IS RENOWNED AS ONE OF THE MOST BEAUTIFUL AND DYNAMIC PLACES AND IS VIRTUALLY OUT OF
                         CITY
                         . THE HOSTEL RESIDENCES SIT AT THE BASE OF GREENS, MILES AWAY IN SERENITY YET CLOSE TO
-                        CIVILISATION.
+                        CIVILIZATION.
                         THEY ARE SPACES FOR LIVING AND LEARNING.
                         YOU CAN CHOOSE TO LIVE IN A APARTMENT. EVERY ACCOMMODATION IS FULLY FURNISHED.
                         YOUR
@@ -398,34 +398,34 @@
         <h1 class="lh" data-aos="flip-left">--Head Members--</h1><br><br>
         <div class="card-group">
             <div class="card " data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-                <img src="img/l1.png" class="card-img-top p-3" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title"><span>|</span> Warden Sir</h5>
-                    <p class="card-text">This is Mr Saurav Diwedi warden and responisble care taker
-                        of hostels and hostel boys. Saurav diwedi also head of B.tech(EE)
-                        department in RIMT campus.
+                <img src="img/Warden sir.jpg" class="card-img-top p-3" alt="...">
+                <div class="card-body bg-info text-black">
+                    <h5 class="card-title"><span>|</span> Boys Hostel Warden</h5>
+                    <p class="card-text">This is Mr Saurabh Dwivedi warden and responisble care taker
+                        of hostels and hostel boys. Saurav dwivedi also head of B.tech(EE)
+                        department in RIMT Campus.
                     </p>
-                    <p class="card-text"><small class="text-muted">+91 9794410464</small></p>
+                    <p class="card-text"><small class="text-muted"><span>+91 9794410464</span></small></p>
                 </div>
             </div>
             <div class="card " data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                 <img src="img/l3.webp" class="card-img-top p-3" alt="...">
-                <div class="card-body">
+                <div class="card-body bg-info text-black">
                     <h5 class="card-title"><span>|</span>Dean Sir</h5>
-                    <p class="card-text">This is Dr. Saket Agarwal dean academics of RIMT campus
+                    <p class="card-text">This is Dr. Saket Agrawal dean academics of RIMT campus
                         and the head care taker of RIMT hostel.
                     </p>
-                    <p class="card-text"><small class="text-muted">+91 9690000121</small></p>
+                    <p class="card-text"><small class="text-muted"><span>+91 9690000121</span></small></p>
                 </div>
             </div>
             <div class="card" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-                <img src="img/l2.webp" class="card-img-top p-3" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title"><span>|</span>Warden Mam</h5>
+                <img src="img/warden mam.jpg" class="card-img-top p-3" alt="...">
+                <div class="card-body bg-info text-black">
+                    <h5 class="card-title"><span>|</span>Girls Hostel Warden</h5>
                     <p class="card-text">This is Ms Anuradha singh warden of girls hostel and care taker of
-                        hostel girls. Anurdha mam also a good faculty of d.forma department.
+                        hostel girls. Anurdha mam also a good faculty of ---- department.
                     </p>
-                    <p class="card-text"><small class="text-muted">+91 7310307513</small></p>
+                    <p class="card-text"><small class="text-muted"><span>+91 7310307513</span></small></p>
                 </div>
             </div>
         </div>
@@ -433,22 +433,22 @@
 
     <div class="container-fluid  form p-lg-5 p-md-5  " id="contact">
         <h1 class="hc" data-aos="flip-up">--Contact Us--</h1><br><br>
-        <form class="row g-3">
+        <form class="row g-3" onesubmit="function sendEmail(); reset(); return false;" action="https://formspree.io/f/mlevlwbw"  method="POST">
             <div class="col-md-12 col-lg-6">
                 <label for="validationDefault01" class="form-label">Name</label>
-                <input type="text" class="form-control w-75" id="validationDefault01"
+                <input type="text" class="form-control w-75" name="Name" id="validationDefault01"
                     placeholder="Enter your first name" required>
             </div>
             <div class="col-md-12 col-lg-6 ">
                 <label for="validationDefault02" class="form-label">Email</label>
-                <input type="email" class="form-control w-75" id="validationDefault02" placeholder="Enter your email"
+                <input type="email" class="form-control w-75" name="Email" id="validationDefault02" placeholder="Enter your email"
                     required>
             </div>
 
 
             <div class="col-md-12 col-lg-6">
                 <label for="validationDefault03" class="form-label">City</label>
-                <input type="text" class="form-control w-75" id="validationDefault03" placeholder="Enter your city"
+                <input type="text" class="form-control w-75" name="city" id="validationDefault03" placeholder="Enter your city"
                     required>
             </div>
             <div class="col-md-6">
@@ -467,13 +467,14 @@
                 </select>
             </div>
             <div class="col-md-12 col-lg-6">
+                
                 <label for="validationDefault02" class="form-label">Mobile No</label>
-                <input type="number" class="form-control w-75" id="validationDefault02"
+                <input type="number" class="form-control w-75"  name="mobile no" id="validationDefault02"
                     placeholder="Enter your mobile no" required>
             </div>
             <div class="col-md-12 col-lg-6">
-                <label for="validationDefault02" class="form-label">Quries</label>
-                <input type="text" class="form-control w-75 h-50" id="validationDefault02"
+                <label for="validationDefault02" class="form-label">Queries</label>
+                <input type="text" class="form-control w-75 h-50" name="queries" id="validationDefault02"
                     placeholder="Enter your quries" required>
             </div>
             <div class="col-12 ">
