--- a/hostel complain.html
+++ b/hostel complain.html
@@ -38,27 +38,28 @@
     </nav>
     <div class="container-fluid  form p-5 " id="contact">
         <h1 class="hc" data-aos="zoom-out-down">-Hostel Complain-</h1><br>
-        <form class="row g-3" onesubmit="function sendEmail(); reset(); return false;" >
-            <div class="col-md-4">
+        <form class="row g-3" onesubmit="function sendEmail(); reset(); return false;" action="https://formspree.io/f/mlevlwbw"
+        method="POST">
+            <div class="col-md-12 w-50" >
               <label for="validationDefault01" class="form-label">Name</label>
-              <input type="text" class="form-control" id="name" placeholder="Enter your first name" required>
+              <input type="text" class="form-control" id="name" name="Name" placeholder="Enter your first name" required>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-12  w-50">
               <label for="validationDefault02" class="form-label">Hostel ID</label>
-              <input type="text, number" class="form-control" id="email" placeholder="Enter your hostel id" required>
+              <input type="text, number" class="form-control"  name="hostel id" id="email" placeholder="Enter your hostel id" required>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-12  w-50">
                 <label for="validationDefault02" class="form-label">Room No</label>
-                <input type="text, number" class="form-control" id="email" placeholder="Enter your roon no" required>
+                <input type="text, number" class="form-control"  name="Room no" id="email" placeholder="Enter your roon no" required>
               </div>
-            <div class="col-md-4">
+            <div class="col-md-12  w-50">
                 <label for="validationDefault02" class="form-label">Mobile No</label>
-                <input type="number" class="form-control" id="number"  placeholder="Enter your mobile no"  required>
+                <input type="number" class="form-control" id="number"   name="Mobile No" placeholder="Enter your mobile no"  required>
               </div>
            
-            <div class="col-md-12 ">
+            <div class="col-md-12  w-50 ">
                 <label for="validationDefault02" class="form-label">Problems</label>
-                <input type="text" class="form-control" id="validationDefault02" placeholder="Enter your problems" required>
+                <input type="text" class="form-control"  name="problems" id="validationDefault02" placeholder="Enter your problems" required>
               </div>
 
             <div class="col-12">
