--- a/hostel.leave.html
+++ b/hostel.leave.html
@@ -37,33 +37,33 @@
         </div>
     </nav>
     <div class="container-fluid  form p-5 " id="contact">
-        <h1 class="hc" data-aos="zoom-out-down">-Apply for hostel leave-</h1><br>
-        <form class="row g-3" onesubmit="function sendEmail(); reset(); return false;" >
+        <h1 class="hc p-sm-3" data-aos="zoom-out-down">-Apply For Leave-</h1><br>
+        <form class="row g-3" onesubmit="function sendEmail(); reset(); return false;" action="https://formspree.io/f/mlevlwbw"  method="POST">
             <div class="col-md-4">
               <label for="validationDefault01" class="form-label">Name</label>
-              <input type="text" class="form-control" id="name" placeholder="Enter your first name" required>
+              <input type="text" class="form-control" id="name" name="Name" placeholder="Enter your first name" required>
             </div>
             <div class="col-md-4">
               <label for="validationDefault02" class="form-label">Father Name</label>
-              <input type="text" class="form-control" id="email" placeholder="Enter your father name" required>
+              <input type="text" class="form-control" id="email"  name=" father Name" placeholder="Enter your father name" required>
             </div>
             <div class="col-md-4">
                 <label for="validationDefault02" class="form-label">Mobile No</label>
-                <input type="number" class="form-control" id="number"  placeholder="Enter your mobile no"  required>
+                <input type="number" class="form-control" id="number"  name="Mobile no" placeholder="Enter your mobile no"  required>
               </div>
               <div class="col-md-4">
                 <label for="validationDefault02" class="form-label">Parents Contact No</label>
-                <input type="number" class="form-control" id="number"  placeholder="Enter your parents contact no"  required>
+                <input type="number" class="form-control" id="number" name="parents contact no" placeholder="Enter your parents contact no"  required>
               </div>
            
             <div class="col-md-6">
               <label for="validationDefault03" class="form-label">City</label>
-              <input type="text" class="form-control" id="city" placeholder="Enter your city" required>
+              <input type="text" class="form-control" id="city" name="city" placeholder="Enter your city" required>
             </div>
         
             <div class="col-md-12 ">
                 <label for="validationDefault02" class="form-label">Reason For Leave</label>
-                <input type="text" class="form-control" id="validationDefault02" placeholder="Enter your reasons" required>
+                <input type="text" class="form-control" id="validationDefault02" name="Reason for leave" placeholder="Enter your reasons" required>
               </div>
 
             <div class="col-12">
