--- a/loginpage.html
+++ b/loginpage.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <div class="container-fluid login p-4">
-        <p class="loginp"><span>Note:</span> This page contain only for RIMT hostel students.</p>
+        <p class="loginp"><span>Note:</span> This page content only for RIMT hostel students.</p>
         <div class="btn-group-vertical  loginbtn m-5 p-4" role="group" aria-label="Vertical button group">
             <button type="button" class="btn btn-dark"><a href="hostel.leave.html">Apply for hostel leave</a></button><br>
             <button type="button" class="btn btn-dark"><a href="hostel complain.html">Hostel Complain</a></button><br>
