--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 </div>
                 <div class="col" data-aos="flip-right">
                     <div class="card1">
-                        <img src="img/m1.png" class="card-img-top facility2" alt="...">
+                        <img src="img/m2.png" class="card-img-top facility2" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">24*7 Medical facility</h5>
 
@@ -402,16 +402,16 @@
                 <div class="card-body bg-info text-black">
                     <h5 class="card-title"><span>|</span> Boys Hostel Warden</h5>
                     <p class="card-text">This is Mr Saurabh Dwivedi warden and responisble care taker
-                        of hostels and hostel boys. Saurav dwivedi also head of B.tech(EE)
+                        of hostel and hostel boys. Saurav dwivedi also head of B.tech(EE)
                         department in RIMT Campus.
                     </p>
                     <p class="card-text"><small class="text-muted"><span>+91 9794410464</span></small></p>
                 </div>
             </div>
             <div class="card " data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-                <img src="img/l3.webp" class="card-img-top p-3" alt="...">
+                <img src="img/dean sir.jpg" class="card-img-top p-3" alt="...">
                 <div class="card-body bg-info text-black">
-                    <h5 class="card-title"><span>|</span>Dean Sir</h5>
+                    <h5 class="card-title"><span>|</span>Dean Academics</h5>
                     <p class="card-text">This is Dr. Saket Agrawal dean academics of RIMT campus
                         and the head care taker of RIMT hostel.
                     </p>
@@ -425,14 +425,14 @@
                     <p class="card-text">This is Ms Anuradha singh warden of girls hostel and care taker of
                         hostel girls. Anurdha mam also a good faculty of ---- department.
                     </p>
-                    <p class="card-text"><small class="text-muted"><span>+91 7310307513</span></small></p>
+                    <p class="card-text"><small class="text-muted"><span>+91 7830064345</span></small></p>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container-fluid  form p-lg-5 p-md-5  " id="contact">
-        <h1 class="hc" data-aos="flip-up">--Contact Us--</h1><br><br>
+    <div class="container-fluid  form p-lg-5 p-md-5  " id="contact"><br>
+        <h1 class="hc" data-aos="flip-up">--Contact Us--</h1><br>
         <form class="row g-3" onesubmit="function sendEmail(); reset(); return false;" action="https://formspree.io/f/mlevlwbw"  method="POST">
             <div class="col-md-12 col-lg-6">
                 <label for="validationDefault01" class="form-label">Name</label>
@@ -451,7 +451,7 @@
                 <input type="text" class="form-control w-75" name="city" id="validationDefault03" placeholder="Enter your city"
                     required>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-12 col-lg-6 col-sm-6">
                 <label for="validationDefault04" class="form-label " id="state">Room Type</label>
                 <select class="form-select w-75 form-control" id="validationDefault04" required>
                     <option selected disabled value="">Choose your room type</option>
