--- a/boyshostel.leave.html
+++ b/boyshostel.leave.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hostel Compalin</title>
+    <title>Boys Hostel leave</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <script src="bootstrap.bundle.js"></script>
     <link rel="stylesheet" href="index.css">
@@ -37,29 +37,33 @@
         </div>
     </nav>
     <div class="container-fluid  form p-5 " id="contact">
-        <h1 class="hc" data-aos="zoom-out-down">-Hostel Complain-</h1><br>
-        <form class="row g-3" onesubmit="function sendEmail(); reset(); return false;" action="https://formspree.io/f/mlevlwbw"
-        method="POST">
-            <div class="col-md-4 " >
+        <h1 class="hc p-sm-3" data-aos="zoom-out-down">-Apply For Leave-</h1><br>
+        <form class="row g-3" onesubmit="function sendEmail(); reset(); return false;" action="https://formspree.io/f/mlevlwbw"  method="POST">
+            <div class="col-md-4">
               <label for="validationDefault01" class="form-label">Name</label>
               <input type="text" class="form-control" id="name" name="Name" placeholder="Enter your first name" required>
             </div>
-            <div class="col-md-4 ">
-              <label for="validationDefault02" class="form-label">Hostel ID</label>
-              <input type="text, number" class="form-control"  name="hostel id" id="email" placeholder="Enter your hostel id" required>
+            <div class="col-md-4">
+              <label for="validationDefault02" class="form-label">Father Name</label>
+              <input type="text" class="form-control" id="email"  name=" father Name" placeholder="Enter your father name" required>
             </div>
-            <div class="col-md-4 ">
-                <label for="validationDefault02" class="form-label">Room No</label>
-                <input type="text, number" class="form-control"  name="Room no" id="email" placeholder="Enter your roon no" required>
-              </div>
-            <div class="col-md-4 ">
+            <div class="col-md-4">
                 <label for="validationDefault02" class="form-label">Mobile No</label>
-                <input type="number" class="form-control" id="number"   name="Mobile No" placeholder="Enter your mobile no"  required>
+                <input type="number" class="form-control" id="number"  name="Mobile no" placeholder="Enter your mobile no"  required>
+              </div>
+              <div class="col-md-4">
+                <label for="validationDefault02" class="form-label">Parents Contact No</label>
+                <input type="number" class="form-control" id="number" name="parents contact no" placeholder="Enter your parents contact no"  required>
               </div>
            
-            <div class="col-md-6   ">
-                <label for="validationDefault02" class="form-label">Problems</label>
-                <input type="text" class="form-control"  name="problems" id="validationDefault02" placeholder="Enter your problems" required>
+            <div class="col-md-6">
+              <label for="validationDefault03" class="form-label">City</label>
+              <input type="text" class="form-control" id="city" name="city" placeholder="Enter your city" required>
+            </div>
+        
+            <div class="col-md-12 ">
+                <label for="validationDefault02" class="form-label">Reason For Leave</label>
+                <input type="text" class="form-control" id="validationDefault02" name="Reason for leave" placeholder="Enter your reasons" required>
               </div>
 
             <div class="col-12">
