--- a/cricket champion.html
+++ b/cricket champion.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Criket Champion</title>
+    <title>Sports and Game</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <script src="bootstrap.bundle.js"></script>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="college.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
@@ -37,62 +38,37 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid" id="about">
-        <h1 class="hm" data-aos="flip-right">--Cricket Champion--</h1>
-        <h2 class="ab "><span>|</span>About</h2><br>
+    <div class="container-fluid desciption-container" id="about">
+        <h1 class="hm " data-aos="flip-left">--Sports Champion--</h1><br>
+
         <div class="text">
-            <div class="img2">
-                <img src="img/college1.jpg" class="img2">
-            </div>
-
-            <P class="para1">
-                RIMT CAMPUS IS RENOWNED AS ONE OF THE MOST BEAUTIFUL AND DYNAMIC PLACES AND IS VIRTUALLY OUT OF
-                CITY
-                . THE HOSTEL RESIDENCES SIT AT THE BASE OF GREENS, MILES AWAY IN SERENITY YET CLOSE TO
-                CIVILISATION.
-                THEY ARE SPACES FOR LIVING AND LEARNING.
-                YOU CAN CHOOSE TO LIVE IN A APARTMENT. EVERY ACCOMMODATION IS FULLY FURNISHED.
-                YOUR
-                DAY-TO-DAY COMFORTS ARE WELL TAKEN CARE OF. OUR ROOMS ARE SPACIOUS, WELL-LIT AND AIRY.
-                ALL STANDARD MEDICAL FACILITIES ARE AVAILABLE WITHIN THE CAMPUS AND IN CASE OF AN EMERGENCY,
-                THERE ARE
-                PROVISIONS TO RUSH TO THE NEAREST HEALTHCARE FACILITY.
-                THERE ARE SPECIAL ACCESSIBLE PLACES IN THE ROOMS AND HALLS FOR STUDENTS.
-            </P>
-        </div>
-
-        <br><br>
-        <div class="text">
-            <div class="img2">
-                <img src="img/college.jpg" class="img2">
-            </div>
-            <P class="para">
-                At RIMT our entire focus is on giving you a home environment away from your home with the only
-                difference that at home you live with your biological family, but in an RIMT hostel, you live
-                with
-                the family of your roommates.
-
-                There is round-the-clock high-tech security, to begin with. Once you start living inside the
-                RIMT
-                campus, you are as safe as you are at home, in fact, more. We have hired one of the best
-                security
-                agencies to keep our students safe. Every nook and corner of the campus is illuminated at night.
-                There are CCTV cameras installed while taking full care of the privacy concerns of our students.
-
-                During your stay at the RIMT hostel, you will be interacting with students whose native language
-                and
-                way of life will be different than yours. In a globally connected world, after all, your work
-                environment is going to consist of people from all over the world hence.
-
-            </P>
-
+            <img src="img/s.jpg" class="card-img-top  img-responsive floating-img
+             right" alt="...">
+            <h3><span>|</span>Sports and Game</h3>
+            <p>Rajshree hostel students is always in campus, hosteller is always attending
+                all the lecture daily.the attendence of hostel boys and girls is maximum.
+                the main reason of rimt hosteller attending class is that rajshree hostel
+                is so close in rajshree campus. So in sort time hosteller go for college
+                and attend the class, and the lunch time hostel mess is so close to rimt
+                campus thats why so easy for lunch.
+            </p>
+            
+            <img src="img2/g23.jpg" class="card-img-top  img-responsive floating-img left">
+            <h3><span>|</span>Family Environment</h3>
+            <p>Rajshree hostel students is always in campus, hosteller is always attending
+                all the lecture daily.the attendence of hostel boys and girls is maximum.
+                the main reason of rimt hosteller attending class is that rajshree hostel
+                is so close in rajshree campus. So in sort time hosteller go for college
+                and attend the class, and the lunch time hostel mess is so close to rimt
+                campus thats why so easy for lunch.
+            </p>
         </div>
 
     </div>
     <div class="card-footer text-muted ">
 
     </div>
-</div>
+    </div>
 
     <div class="container-fluid footer">
         <br>
@@ -133,7 +109,6 @@
             <h3 class="hf2">@2022 | All right Reserved | Developed By <span>Rakesh Singh</span> </h3>
         </div>
     </div>
-
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
         AOS.init();
