--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rimt hosteller</title>
+    <title>Rajshree hostellers</title>
     <link rel="stylesheet" href="bootstrap.min.css">
     <script src="bootstrap.bundle.js"></script>
     <link rel="stylesheet" href="index.css">
@@ -401,8 +401,8 @@
                 <img src="img/Warden sir.jpg" class="card-img-top p-3" alt="...">
                 <div class="card-body bg-info text-black">
                     <h5 class="card-title"><span>|</span> Boys Hostel Warden</h5>
-                    <p class="card-text">This is Mr Saurabh Dwivedi warden and responisble care taker
-                        of hostel and hostel boys. Saurav dwivedi also head of B.tech(EE)
+                    <p class="card-text">This is Mr Saurabh Dwivedi warden of boys hostel 
+                        and responsible care taker of hostel. Saurav dwivedi also head of B.tech(EE)
                         department in RIMT Campus.
                     </p>
                     <p class="card-text"><small class="text-muted"><span>+91 9794410464</span></small></p>
@@ -422,8 +422,8 @@
                 <img src="img/warden mam.jpg" class="card-img-top p-3" alt="...">
                 <div class="card-body bg-info text-black">
                     <h5 class="card-title"><span>|</span>Girls Hostel Warden</h5>
-                    <p class="card-text">This is Ms Anuradha singh warden of girls hostel and care taker of
-                        hostel girls. Anurdha mam also a good faculty of ---- department.
+                    <p class="card-text">This is Ms Anuradha Yadav warden of girls hostel and responsible care taker of
+                        hostel. Anurdha Yadav also a good faculty of Education department(B.ED, D.EL.ED).
                     </p>
                     <p class="card-text"><small class="text-muted"><span>+91 7830064345</span></small></p>
                 </div>
@@ -532,10 +532,11 @@
             </div>
         </div>
         <br>
-        <div class="container-fluid w-100">
-            <h3 class="hf2">@2022 | All right Reserved | Developed By <span>Rakesh Singh</span> </h3>
-        </div>
+       
 
+    </div>
+    <div class="foot">
+        <h3 class="hf2">@2022 | All right Reserved | Developed By <span>Rakesh Singh</span> </h3>
     </div>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
