--- a/loginpage.html
+++ b/loginpage.html
@@ -41,7 +41,7 @@
     <div class="container-fluid login p-4">
         <p class="loginp"><span>Note:</span> This page content only for RIMT hostel students.</p>
         <div class="btn-group-vertical  loginbtn m-5 p-4" role="group" aria-label="Vertical button group">
-            <button type="button" class="btn btn-dark"><a href="hostel.leave.html">Apply for hostel leave</a></button><br>
+            <button type="button" class="btn btn-dark"><a href="girls and boys.html">Apply for hostel leave</a></button><br>
             <button type="button" class="btn btn-dark"><a href="hostel complain.html">Hostel Complain</a></button><br>
             <button type="button" class="btn btn-dark"><a href="mess complain.html">Mess Compalain</a></button>
         </div>
