--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rajshree hostellers</title>
+  
     <link rel="stylesheet" href="bootstrap.min.css">
     <script src="bootstrap.bundle.js"></script>
     <link rel="stylesheet" href="index.css">
@@ -17,12 +18,12 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css?family=Sofia&effect=neon|outline|emboss|shadow-multiple">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
+    <link rel="icon" href="img/icon.png">
 </head>
 
 <body>
     <div class="mainbody">
-        <nav class="navbar navbar-expand-lg bg-info">
+        <nav class="navbar navbar-expand-lg bg-info ">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
                     <img src="logo2.png" class="logo">
@@ -59,7 +60,7 @@
 
                     </ul>
                     <form class="d-flex" role="search">
-                        <button class="btn1 btn-outline-success"><a href="loginpage.html">
+                        <button class="btn1 btn-outline-success"><a href="login page2.html">
                                 Login</a></button>
                     </form>
                 </div>
@@ -409,7 +410,7 @@
                 </div>
             </div>
             <div class="card " data-aos="flip-right" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-                <img src="img/dean sir.jpg" class="card-img-top p-3" alt="...">
+                <img src="" class="card-img-top p-3" alt="...">
                 <div class="card-body bg-info text-black">
                     <h5 class="card-title"><span>|</span>Dean Academics</h5>
                     <p class="card-text">This is Dr. Saket Agrawal dean academics of RIMT campus
@@ -419,7 +420,7 @@
                 </div>
             </div>
             <div class="card" data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
-                <img src="img/warden mam.jpg" class="card-img-top p-3" alt="...">
+                <img src="" class="card-img-top p-3" alt="...">
                 <div class="card-body bg-info text-black">
                     <h5 class="card-title"><span>|</span>Girls Hostel Warden</h5>
                     <p class="card-text">This is Ms Anuradha Yadav warden of girls hostel and responsible care taker of
@@ -496,7 +497,7 @@
             <p class="address">+91-9528-180-180</p>
             <p class="address">+91-9690-000-100</p>
             <p class="address">+91-9690-000-102</p>
-            <p  class="address"><a href="">rajshree.insitute@gmail.com</a></p>
+            <p  class="address"><a href="">rajshree.institute@gmail.com</a></p>
         <div class="grid text-center" style="--bs-gap: 25rem 5rem;">
            
             <div class="g-col-6 ">
