--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             <img src="img/b1.jpg" class="card-img-top img-fluid" style="border-bottom:2px solid blue;">
                             <div class="card-body bg-info text-black">
                                 <h5 class="card-title">College Time</h5>
-                                <button class="btn"><a class="knowmore" href="collegetime.html">Know more</a></button>
+                                <button class="btn"><a class="knowmore" href="">Know more</a></button>
                                 <p class="card-text"> </p>
                             </div>
                         </div>
@@ -169,7 +169,7 @@
                             <img src="img/b2.jpg" class="card-img-top img-fluid" style="border-bottom:2px solid blue;">
                             <div class="card-body bg-info text-black">
                                 <h5 class="card-title ">Industrial visit</h5>
-                                <button class="btn"><a class="knowmore" href="industrial visit.html"> Know more</a></button>
+                                <button class="btn"><a class="knowmore" href=""> Know more</a></button>
                                 <p class="card-text"></p>
                             </div>
                         </div>
@@ -179,7 +179,7 @@
                             <img src="img/b3.jpg" class="card-img-top img-fluid" style="border-bottom:2px solid blue;">
                             <div class="card-body bg-info text-black">
                                 <h5 class="card-title">Sports Champion</h5>
-                                <button class="btn"><a class="knowmore" href="cricket champion.html">Know more</a></button>
+                                <button class="btn"><a class="knowmore" href="">Know more</a></button>
                                 <p class="card-text"></p>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
                             <img src="img/b4.jpg" class="card-img-top img-fluid" style="border-bottom:2px solid blue;">
                             <div class="card-body bg-info text-black"><br>
                                 <h5 class="card-title">Hostel Fun</h5>
-                                <button class="btn"><a class="knowmore" href="HostelFun.html">Know more</a></button>
+                                <button class="btn"><a class="knowmore" href="">Know more</a></button>
                                 <p class="card-text"></p>
                             </div>
                         </div>
